# DGSTradingSimulator

./: README.md  pyproject.toml
src/dgstradingsimulator/: __init__.py  core.py
