[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "dgstradingsimulator"
version = "0.1.0"
description = "Simulation of US goverment bonds trading using prediction of DGS curvers."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Vadim Vanak"}]
dependencies = []

# Optional Trove classifiers
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/kotiik/DGSTradingSimulator"
# Issues = "https://github.com/yourname/yourpkg/issues"
